src/test/resources/fixtures/api/scandir-function.php
<?php

    <error descr="'scandir(...)' sorts results by default, please specify the second argument.">scandir('...')</error>;
    scandir('...', SCANDIR_SORT_ASCENDING);